--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -24,8 +25,12 @@
     "mongoose": "^5.11.9",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "socket.io": "^4.0.1",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "axios": "^0.21.1"
   }
 }
