--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.1",
@@ -30,7 +31,5 @@
     "socket.io": "^4.0.1",
     "validator": "^13.5.2"
   },
-  "devDependencies": {
-    "axios": "^0.21.1"
-  }
+  "devDependencies": {}
 }
