--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^7.3.0",
     "helmet": "^4.4.1",
     "http-errors": "^1.8.0",
     "joi": "^17.4.0",
