--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "prettier": "prettier --write \"**/*.{js,json,css,scss,less,md,ts,html,component.html}\""
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
