fix: cron task send mail for user

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ CLIENT_SECRET=UgnXtcm3QrQFcMUzFCI1tdBz
 
 PORT=8080
 CORS_URL=http://localhost:3000
+
+USER_EMAIL=tt8532006@gmail.com
+USER_PWD=Testing123456
